--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -39,7 +39,19 @@ body #main #header{
     height: 54.5px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    padding: 8px 16px;
     background-color: red;
     color: red;
+}
+
+body #main #header #web-name{
+    width: 235px;
+    height: 39px;
+    padding: 8px 16px;
+}
+body #main #header #web-name a {
+    text-decoration: none;
+    color: black;
+    font-family:'Times New Roman', Times, serif;
+    font-size: 15px;
 }
