--- a/asset/css/styles.css
+++ b/asset/css/styles.css
@@ -34,24 +34,59 @@ body #main{
 
 }
 
+/* CSS cho header */
 body #main #header{
     width: 100%;
     height: 54.5px;
     display: flex;
     align-items: center;
     padding: 8px 16px;
-    background-color: red;
-    color: red;
+    background-color:aquamarine;
 }
 
+/* CSS cho web name */
 body #main #header #web-name{
     width: 235px;
     height: 39px;
     padding: 8px 16px;
+    
 }
 body #main #header #web-name a {
     text-decoration: none;
     color: black;
     font-family:'Times New Roman', Times, serif;
     font-size: 15px;
+    line-height: normal;
+    vertical-align: middle;
 }
+
+body #main #header #web-name:hover {
+    background-color: rgba(0, 0, 0, 0.17);
+}
+/* End CSS cho web name */
+
+/* Start CSS cho nav */
+body #main #header #nav{
+    position: absolute;
+    right: 20px;
+    width: 280px;
+    height: 39px;
+}
+
+body #main #header #nav li  {
+    color:black;
+    font-family:'Times New Roman', Times, serif;
+    font-size: 15px;
+    list-style-type: none;
+    display:inline-block;
+}
+body #main #header #nav li a {
+    height: 39px;
+    text-decoration: none;
+    display:block;
+    padding: 8px 16px;
+}
+body #main #header #nav li a:hover {
+    background-color: rgba(0, 0, 0, 0.17);
+} 
+
